[chore]: 프로젝트 ci/cd  및 서버 변경 및 swaagger 수정
